--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,8 @@ find_package(OpenCV CONFIG REQUIRED)
 message("OpenCV_VERSION: " ${OpenCV_VERSION})
 
 find_package(Ceres CONFIG REQUIRED)
-
-
+find_package(manif CONFIG REQUIRED)
+find_package(Sophus CONFIG REQUIRED)
 
 
 
@@ -30,6 +30,11 @@ find_package(Ceres CONFIG REQUIRED)
 
 add_executable(ceres_example src/ceres_examples/ceres_example.cpp)
 target_link_libraries(ceres_example PRIVATE Ceres::ceres)
+
+
+
+add_executable(ceres_exponential_curve_fitting_example src/ceres_examples/ceres_exponential_curve_fitting_example.cpp)
+target_link_libraries(ceres_exponential_curve_fitting_example PRIVATE Ceres::ceres)
 
 add_executable(bundle_adjuster src/ceres_examples/bundle_adjuster.cpp)
 target_link_libraries(bundle_adjuster PRIVATE Ceres::ceres ${OpenCV_LIBS} rerun_sdk)
@@ -52,10 +57,45 @@ target_link_libraries(virtual_cam_incremental_SfM  PRIVATE Ceres::ceres ${OpenCV
 
 
 
+add_executable(pose_graph_2d
+  src/ceres_examples/slam/pose_graph_2d/angle_manifold.h
+  src/ceres_examples/slam/pose_graph_2d/normalize_angle.h
+  src/ceres_examples/slam/pose_graph_2d/pose_graph_2d.cc
+  src/ceres_examples/slam/pose_graph_2d/pose_graph_2d_error_term.h
+  src/ceres_examples/slam/pose_graph_2d/types.h)
+target_link_libraries(pose_graph_2d PRIVATE absl::flags absl::flags_parse absl::log absl::check absl::log_initialize Ceres::ceres)
+
+
 ############################ rerun ############################
 
 add_executable(rerun src/rerun_examples/rerun.cpp)
 set_property(TARGET rerun PROPERTY CXX_STANDARD 17)
 target_link_libraries(rerun PRIVATE rerun_sdk  ${OpenCV_LIBS})
 
+############################ manif ############################
+add_executable(manif_se2_sam src/manif_examples/se2_sam.cpp)
+target_link_libraries(manif_se2_sam PRIVATE MANIF::manif)
 
+add_executable(manif_SE3_examples src/manif_examples/SE3_examples.cpp)
+target_link_libraries(manif_SE3_examples PRIVATE MANIF::manif)
+
+add_executable(manif_se2_localization src/manif_examples/se2_localization.cpp)
+target_link_libraries(manif_se2_localization PRIVATE MANIF::manif)
+
+
+#add_executable(so2_average src/manif_examples/so2_average.cpp)
+#add_executable(se2_average src/manif_examples/se2_average.cpp)
+#add_executable(se2_interpolation src/manif_examples/se2_interpolation.cpp)
+#add_executable(se2_decasteljau src/manif_examples/se2_DeCasteljau.cpp)
+#add_executable(se2_localization src/manif_examples/se2_localization.cpp)
+#add_executable(se2_localization_ukfm src/manif_examples/se2_localization_ukfm.cpp)
+#add_executable(se2_sam src/manif_examples/se2_sam.cpp)
+#add_executable(se3_localization src/manif_examples/se3_localization.cpp)
+#add_executable(se3_sam src/manif_examples/se3_sam.cpp)
+#add_executable(se3_sam_selfcalib src/manif_examples/se3_sam_selfcalib.cpp)
+#add_executable(se_2_3_localization src/manif_examples/se_2_3_localization.cpp)
+
+############################ sophus ############################
+
+add_executable(sophus_examples src/sophus_examples/useSophus.cpp)
+target_link_libraries(sophus_examples PRIVATE Sophus::Sophus)
