--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,29 +75,18 @@ jobs:
         echo "${{ github.workspace }}/vcpkg" >> $GITHUB_PATH
         echo "VCPKG_DEFAULT_TRIPLET=x64-linux-release" >> $GITHUB_ENV
 
-    # - name: Set up Miniconda
-    #   uses: conda-incubator/setup-miniconda@v3
-    #   with:
-    #     auto-update-conda: true
-    #     python-version: '3.13'
-    #     environment-name: robotic_notes
-    #     activate-environment: robotic_notes
-
-    # - name: Install Python dependencies
-    #   shell: bash -l {0}
-    #   run: |
-    #     conda activate robotic_notes
-    #     pip install rerun-sdk
-    #     conda install -c conda-forge opencv -y
-    #     pip install graphslam
-    #     conda install -c conda-forge gtsam -y
-    #     conda install -c conda-forge matplotlib -y
-    #     conda install -c conda-forge plotly -y
-    #     conda install -c conda-forge jupyterlab -y
-    #     pip install gradio_rerun
-    #     pip install ahrs
-    #     conda clean -afy
-    #     pip cache purge
+    - name: Verify Arrow cache integrity
+      working-directory: ${{ github.workspace }}
+      continue-on-error: true
+      run: |
+        # Check if cached Arrow installation is complete
+        ARROW_LIB="${{ github.workspace }}/build/vcpkg_installed/x64-linux-release/lib/libarrow.a"
+        ARROW_CONFIG="${{ github.workspace }}/build/vcpkg_installed/x64-linux-release/share/arrow/ArrowTargets.cmake"
+        if [ -f "$ARROW_CONFIG" ] && [ ! -f "$ARROW_LIB" ]; then
+          echo "WARNING: Arrow config exists but library is missing. Clearing corrupted cache..."
+          rm -rf "${{ github.workspace }}/build/vcpkg_installed/x64-linux-release/share/arrow"
+          rm -rf "${{ github.workspace }}/build/vcpkg_installed/x64-linux-release/lib/libarrow*"
+        fi
 
     - name: Check disk space before CMake
       run: |
@@ -116,11 +105,30 @@ jobs:
       run: |
         # Verify triplet is set correctly
         echo "VCPKG_DEFAULT_TRIPLET=${VCPKG_DEFAULT_TRIPLET}"
-        cmake -S . -B build \
+        # Run CMake configure - if it fails due to missing Arrow, we'll handle it
+        if ! cmake -S . -B build \
           -DCMAKE_TOOLCHAIN_FILE=./vcpkg/scripts/buildsystems/vcpkg.cmake \
           -DCMAKE_BUILD_TYPE=Release \
           -DVCPKG_TARGET_TRIPLET=x64-linux-release \
-          -DVCPKG_MANIFEST_DIR=${{ github.workspace }}
+          -DVCPKG_MANIFEST_DIR=${{ github.workspace }}; then
+          echo "CMake configure failed. Checking Arrow installation..."
+          # Check if Arrow library is missing
+          ARROW_LIB="${{ github.workspace }}/build/vcpkg_installed/x64-linux-release/lib/libarrow.a"
+          if [ ! -f "$ARROW_LIB" ]; then
+            echo "Arrow library missing. Removing corrupted Arrow installation and retrying..."
+            rm -rf "${{ github.workspace }}/build/vcpkg_installed/x64-linux-release/share/arrow" || true
+            rm -rf "${{ github.workspace }}/build/vcpkg_installed/x64-linux-release/lib/libarrow*" || true
+            # Retry CMake configure - it will reinstall Arrow
+            cmake -S . -B build \
+              -DCMAKE_TOOLCHAIN_FILE=./vcpkg/scripts/buildsystems/vcpkg.cmake \
+              -DCMAKE_BUILD_TYPE=Release \
+              -DVCPKG_TARGET_TRIPLET=x64-linux-release \
+              -DVCPKG_MANIFEST_DIR=${{ github.workspace }}
+          else
+            echo "Arrow library exists, but CMake still failed. Re-raising error..."
+            exit 1
+          fi
+        fi
 
     - name: Clean up vcpkg build artifacts (keep cached packages)
       run: |
